--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,3 +3,13 @@
 @tailwind components;
 
 @tailwind utilities;
+
+@layer base {
+    html ,body {
+        width: 100%;
+        height: 100%;
+    }
+    body {
+        @apply bg-nightBlue
+    }
+}
